--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "url": "https://github.com/hugolify/hugolify-theme-services-persons/issues"
   },
   "author": {
-    "name": "Hugolify",
-    "url": "https://hugolify.com"
+    "email": "sebousan@gmail.com",
+    "name": "Sébastien Moulène",
+    "url": "https://www.sebastienmoulene.com/"
   },
   "keywords": [
     "hugolify",
