--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,1 @@
-{
-  "plugins": ["prettier-plugin-go-template"],
-  "overrides": [
-    {
-      "files": ["*.html"],
-      "options": {
-        "parser": "go-template"
-      }
-    }
-  ]
-}
+"@hugolify/prettier-config"
